--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
   <div class="jumbotron">
     <h1>{{ title }}</h1>
   </div>
-  <router-outlet [masterList]="masterRedit"></router-outlet>
+  <router-outlet></router-outlet>
 </div>
