add firebase db connections to sasave and retrieve data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,10 @@
   </div>
   <router-outlet></router-outlet>
 </div>
+
+<footer class="footer">
+  <div class="container">
+    <a class="text-muted" routerLink="admin">Admin</a>
+    <a class="text-muted" routerLink="">Home</a>    
+  </div>
+</footer>
