--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,14 +1,12 @@
-<h2>{{reditToDisplay.title}} </h2>
+<h2>{{(reditToDisplay | async)?.title}} </h2>
 <div class="jumbotron">
-    {{reditToDisplay.desc}} <br>
-    Votes: {{reditToDisplay.vote}} <br>
+    {{(reditToDisplay | async)?.desc}} <br>
+    Votes: {{(reditToDisplay| async)?.votes}} <br>
 
     <button  (click)="showComments()">Comments</button>
 
     <ul *ngIf="displayComments">
-      <li *ngFor="let comment of reditToDisplay.comments">: {{comment}}</li>
+      <li *ngFor="let comment of reditToDisplay.comments | async">: {{ comment }}</li>
     </ul>
 </div>
 <a routerLink="">Home</a>
-
-Brian is a jerk! - Skye
